# opengl-core

./: CMakeLists.txt  README.md
include/: core.h  core.hpp  cwrapper.h  definitions.h  object.hpp  sdlwrapper.hpp  shader.hpp  texture.hpp
shaders/: simple.fs
src/: core.cpp  cwrapper.cpp  main.cpp  object.cpp  sdlwrapper.cpp  shader.cpp  texture.cpp
